<resources>
    <string name="app_name">DixtechApp</string>

    <string name="logo">DixTech</string>
    <string name="madeby">Made\nby\nDixTech</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="cargo">Cargo</string>
    <string name="dataNasc">Data de Nascimento</string>
    <string name="telefone">Telefone</string>
    <string name="cpf">CPF</string>
    <string name="entrar">Entrar</string>
    <string name="cadastro">Cadastre-se</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="deslogar">Sair da conta</string>
    <string name="textCadastro">Crie uma conta clicando aqui</string>
    <string name="textLogin">Já possui uma conta?\nFaça login clicando aqui</string>
    <string name="versao">Versão do Aplicativo: 1.0</string>
    <string name="sobre">SOBRE A NOSSA EMPRESA\n\nA Dix Tech é uma empresa start-up de tecnologia com função de oferecer serviços para outras empresas que precisam de sistemas ou sites</string>
    <string name="addbio">Adicione uma Biografia</string>
    <string name="bio">Biografia</string>
    <string name="interno">ARMAZENAMENTO INTERNO</string>
    <string name="externo">ARMAZENAMENTO EXTERNO</string>
    <string name="gravar">Gravar</string>
    <string name="adicionar">Adicionar</string>
    <string name="alterar">Alterar</string>
    <string name="deletar">Deletar</string>
    <string name="ler">Ler</string>
    <string name="descserv">Descrição do Serviço</string>
    <string name="nomeserv">Nome do Serviço</string>
    <string name="gerenciar">Gerenciar</string>
    <string name="cliente">Cliente</string>
    <string name="servicos">Serviços</string>
    <string name="atividades">Atividades</string>
    <string name="irpara">Ir Para</string>
    <string name="confirmsenha">Confirmar Senha</string>

    <string name="descHome">Botão home</string>
    <string name="descUser">Botão/imagem de usuário</string>
    <string name="descLinha">Uma linha para facilitar a navegação</string>
    <string name="descLogo">Logo/Nome da nossa empresa</string>
    <string name="descMadeBy">Informa que o app foi feito por nossa empresa</string>
    <string name="descCadastro">Cadastro</string>
    <string name="descEmail">Imagem representando email</string>
    <string name="descMap">Botão da tela de mapa</string>
    <string name="descInfo">Botão da tela de informações</string>
    <string name="descFacebook">Botão para acessar a página do facebook da empresa</string>
    <string name="descInstagram">Botão para acessar a página do instagram da empresa</string>
    <string name="descLinkedin">Botão para acessar a página do linkedin da empresa</string>
    <string name="descGit">Botão para acessar a página do GitHub da empresa</string>
    <string name="chNav">Escolha o aplicativo</string>
    <string name="descgravInterno">Botão de salvamento no armazenamento interno</string>
    <string name="descgravExterno">Botão de salvamento no armazenamento Externo</string>
    <string name="desclerInterno">Botão de ler o armazenamento Interno</string>
    <string name="desclerExterno">Botão de ler o armazenamento Externo</string>
    <string name="descGravar">Botão de gravação geral</string>
    <string name="descaddserv">Botão de inserção de dados geral</string>
    <string name="descUpdate">Botão de alteração de dados geral</string>
    <string name="descDelete">Botão de exclusão de dados geral</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>
