<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_100"
    tools:context=".Bio">

    <TextView
        android:id="@+id/txtaddbio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/amiko"
        android:text="@string/addbio"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/cadastroComponents"
        style="@style/CadastroComponents"
        android:background="@drawable/edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtaddbio" />

    <TextView
        android:id="@+id/txtinterno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/amiko"
        android:text="@string/interno"
        android:textColor="@color/blue_100"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cadastroComponents"
        app:layout_constraintStart_toStartOf="@+id/cadastroComponents"
        app:layout_constraintTop_toTopOf="@+id/cadastroComponents" />

    <TextView
        android:id="@+id/txtinterno2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/amiko"
        android:text="@string/externo"
        android:textColor="@color/blue_100"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cadastroComponents"
        app:layout_constraintStart_toStartOf="@+id/cadastroComponents"
        app:layout_constraintTop_toBottomOf="@+id/btnlerinterno" />

    <Button
        android:id="@+id/btngravarinterno"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/descgravInterno"
        android:text="@string/gravar"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtinterno"
        app:layout_constraintStart_toStartOf="@+id/txtinterno"
        app:layout_constraintTop_toBottomOf="@+id/txtinterno" />

    <Button
        android:id="@+id/btnlerinterno"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/desclerInterno"
        android:text="@string/ler"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtinterno"
        app:layout_constraintStart_toStartOf="@+id/txtinterno"
        app:layout_constraintTop_toBottomOf="@+id/btngravarinterno" />

    <Button
        android:id="@+id/btngravarinterno3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/desclerExterno"
        android:text="@string/ler"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtinterno"
        app:layout_constraintStart_toStartOf="@+id/txtinterno"
        app:layout_constraintTop_toBottomOf="@+id/btngravarexterno" />

    <Button
        android:id="@+id/btngravarexterno"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/descgravExterno"
        android:text="@string/gravar"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtinterno"
        app:layout_constraintStart_toStartOf="@+id/txtinterno"
        app:layout_constraintTop_toBottomOf="@+id/txtinterno2" />


</androidx.constraintlayout.widget.ConstraintLayout>