<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_100"
    tools:context=".UpdateServico">
    
   
    <View
        android:id="@+id/updateServ"
        style="@style/CadastroComponents"
        android:background="@drawable/edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtupdtserv" />

     <EditText
        android:id="@+id/edittxt_nm_serv_updt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/nomeserv"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/grey200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtupdtserv"
         app:layout_constraintTop_toTopOf="@id/updateServ"
        tools:ignore="TouchTargetSizeCheck" />
  
    <EditText
        android:id="@+id/edittxt_desc_serv_updt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/descserv"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/grey200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittxt_nm_serv_updt"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnupdateserv"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/descaddserv"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/updateServ"
        app:layout_constraintStart_toStartOf="@+id/updateServ"
        app:layout_constraintTop_toBottomOf="@+id/edittxt_desc_serv_updt"
        tools:text="@string/alterar" />
    
    <Button
        android:id="@+id/btndeleteserv"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/descDelete"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/updateServ"
        app:layout_constraintStart_toStartOf="@+id/updateServ"
        app:layout_constraintTop_toBottomOf="@+id/btnupdateserv"
        tools:text="@string/deletar" />

    <TextView
        android:id="@+id/txtupdtserv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/amiko"
        android:text="@string/alterar"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
