<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormCadastro"
    android:background="@color/blue_100">

    <View
        android:id="@+id/loginComponents"
        style="@style/Login_Components"
        android:background="@drawable/edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtentrar" />

    <TextView
        android:id="@+id/txtentrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/amiko"
        android:text="@string/cadastro"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txttelalogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/amiko"
        android:text="@string/textLogin"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginComponents" />

    <EditText
        android:id="@+id/editnome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:textColor="@color/grey100"
        app:layout_constraintEnd_toEndOf="@+id/loginComponents"
        app:layout_constraintStart_toStartOf="@+id/loginComponents"
        app:layout_constraintTop_toTopOf="@+id/loginComponents"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editcpf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/cpf"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/grey100"
        android:textColorHint="@color/grey200"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editnome"
        app:layout_constraintStart_toStartOf="@+id/editnome"
        app:layout_constraintTop_toBottomOf="@+id/editnome"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edittelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableEnd="@drawable/ic_phone"
        android:ems="10"
        android:hint="@string/telefone"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/grey100"
        android:textColorHint="@color/grey200"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editnome"
        app:layout_constraintStart_toStartOf="@+id/editnome"
        app:layout_constraintTop_toBottomOf="@+id/editcpf"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editcargo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableEnd="@drawable/ic_cargo"
        android:ems="10"
        android:hint="@string/cargo"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/grey100"
        android:textColorHint="@color/grey200"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editnome"
        app:layout_constraintStart_toStartOf="@+id/editnome"
        app:layout_constraintTop_toBottomOf="@+id/edittelefone"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableEnd="@drawable/ic_email"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textColor="@color/grey100"
        android:textColorHint="@color/grey200"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editnome"
        app:layout_constraintStart_toStartOf="@+id/editnome"
        app:layout_constraintTop_toBottomOf="@+id/editcargo"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editsenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableEnd="@drawable/ic_lock"
        android:ems="10"
        android:hint="@string/senha"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/grey100"
        android:textColorHint="@color/grey200"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editnome"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/editnome"
        app:layout_constraintTop_toBottomOf="@+id/editemail"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editrepeatsenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableEnd="@drawable/ic_lock"
        android:ems="10"
        android:hint="@string/confirmsenha"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/grey100"
        android:textColorHint="@color/grey200"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editnome"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editnome"
        app:layout_constraintTop_toBottomOf="@+id/editsenha"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btncadastro"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/entrar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/editnome"
        app:layout_constraintStart_toStartOf="@+id/editnome"
        app:layout_constraintTop_toBottomOf="@+id/editrepeatsenha"
        tools:ignore="DuplicateSpeakableTextCheck" />




</androidx.constraintlayout.widget.ConstraintLayout>

