<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Servicos">
    
    <ImageView
        android:id="@+id/imglogoserv"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/descLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logoazulfull" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarserv"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnhomeserv"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/descHome"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/toolbarserv"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/home" />

    <ImageButton
        android:id="@+id/btnmapserv"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="100dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/descMap"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/btnhomeserv"
        app:layout_constraintEnd_toStartOf="@+id/btnuserserv"
        app:layout_constraintStart_toEndOf="@+id/btnhomeserv"
        app:layout_constraintTop_toTopOf="@+id/btnhomeserv"
        app:srcCompat="@drawable/map"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btninfoserv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="100dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/descInfo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/btnhomeserv"
        app:layout_constraintEnd_toStartOf="@+id/btnuserserv"
        app:layout_constraintStart_toEndOf="@+id/btnhomeserv"
        app:layout_constraintTop_toTopOf="@+id/btnhomeserv"
        app:srcCompat="@drawable/info"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/btnuserserv"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="30dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/descUser"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/btnhomeserv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnhomeserv"
        app:srcCompat="@drawable/usuario"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
